# backtoschool_rust

./: Cargo.toml  README.md  school_db.json
src/: api.rs  app.rs  cli.rs  db.rs  lib.rs  main.rs  models.rs  report.rs
src/application/: app.rs
src/infrastructure/persistence/: mod.rs  school_db.rs
src/modules/: mod.rs
src/modules/school/: mod.rs  models.rs  report.rs
src/presentation/http/: mod.rs  server.rs  ui.rs
